--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,32 @@
 .App {
   text-align: center;
+  background-color: lightgray;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.page {
+  padding: 1vh 10vw 12vh 10vw;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.appointmentWrapper{
+  text-align: center;
+}
+.appointmentPanel {
+  font-size: 7vw;
+  margin: 2vh 0;
+  width: 100%;
+  position: inherit;
+  display: inline-block;
+  z-index: 1000 !important;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#textLink,
+#emailLink {
+  font-size: 6vw;
+  line-height: 9vh;
+  margin: 2vh 0;
+  width: 100%;
+  height: auto;
+  position: inherit;
+  display: inline-block;
+  z-index: 1000 !important;
 }
