added transform none to css textLink and emailLink

--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@ hr {
 
   #textLink,
   #emailLink {
+    transform: none;
     position: fixed;
     display: block !important;
     top: 85vh !important;
