replaced display none with visibility hidden on emailLink and textLink

--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,8 @@ hr {
 
   #textLink,
   #emailLink {
-    visibility: visible;
+    visibility: visible !important;
+    width: 20vw !important;
   }
 
   #emailSmallLink {
