--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 body {
   background-color: lightgray;
-  background-image: url("./photos/broken-noise.png");
+  background-image: url("./photos/brushed_alu_@2X.png");
   background-repeat: repeat;
   font-family: 'ABeeZee', sans-serif;
   min-height: 100vh;
@@ -67,9 +67,16 @@ hr {
   right: 2vw;
 }
 
+#originalMineral,
+#jHeader,
+#blog {
+  background-color: whitesmoke;
+}
+
 #footer:hover {
   text-decoration: none;
 }
+
 
 @media only screen and (max-width: 1024px) {
   .page {
