--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@ hr {
 #originalMineral,
 #jHeader,
 #blog {
-  background-color: whitesmoke;
+  background-image: linear-gradient(60deg, #c5c5c5, #efefef, #c5c5c5);
 }
 
 #footer:hover {
