still trying to fix position fixed for footer buttons not working in safari mobile

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,8 @@ hr {
   border: solid .8px #c4122f;
   margin: 0 0 2vh 0;
   cursor: pointer;
+  -webkit-overflow-scrolling: touch;
+
 }
 
 #textLink {
