--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body {
 
 .page {
   width: 100vw;
-  padding: 10vh 0 14vh 0;
+  margin: 10vh 0 14vh 0;
 }
 
 .hide {
@@ -92,7 +92,7 @@ hr {
 
 @media only screen and (max-width: 1024px) {
   .page {
-    padding: 12vh 0 20vh;
+    margin: 12vh 0 20vh;
   }
   .navbar {
     max-height: 7vh;
