still trying to fix position fixed for footer buttons not working in safari mobile

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,6 @@
 
 body {
   background-color: #f2f2f2;
-  /* background-image: url("./photos/brushed_alu_@2X.png");
-  background-repeat: repeat; */
   font-family: 'ABeeZee', sans-serif;
   min-height: 100vh;
   font-size: calc(20px + 1vw);
@@ -64,7 +62,7 @@ hr {
   border: solid .8px #c4122f;
   margin: 0 0 2vh 0;
   cursor: pointer;
-  -webkit-overflow-scrolling: touch;
+  /* -webkit-overflow-scrolling: touch; */
   z-index: 9999;
 }
 
