--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 .App {
   text-align: center;
-  overflow-x: hidden;
+  min-height: 100vh;
+
 }
 
 body {
   background-color: #f2f2f2;
   font-family: 'ABeeZee', sans-serif;
-  min-height: 100vh;
   font-size: calc(20px + 1vw);
+  overflow-x: hidden;
 }
 
 .navLink {
@@ -15,8 +16,9 @@ body {
 }
 
 .page {
-  width: 100vw;
-  margin: 10vh 0 14vh 0;
+  width: 100%;
+  margin: 10vh 0 0 0;
+  padding: 0 0 18vh 0;
 }
 
 .hide {
@@ -39,12 +41,6 @@ body {
   color: #343a40;
   border: 1px solid #343a40;
   box-shadow: none;
-}
-hr { 
-  display: block;
-  overflow: hidden;
-  border-style: inset;
-  border-width: 1px;
 }
 
 .link {
@@ -74,7 +70,6 @@ hr {
 #emailLink {
   right: -2.5vw;
   padding-right: 2vw;
-
 }
 
 #originalMineral,
@@ -123,7 +118,7 @@ hr {
   
   .service {
     font-size: 7vw;
-    width: 70vw;
+    /* width: 70vw; */
     margin: 10vh 15vw;
   }
 
