--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,12 @@ body {
   background-image: linear-gradient(60deg, #c5c5c5, #efefef, #c5c5c5);
 }
 
+.home-child,
+.color-child {
+  max-width: 900px !important;
+  margin: 0 auto;
+}
+
 #footer:hover {
   text-decoration: none;
 }
