--- a/src/Services.css
+++ b/src/Services.css
@@ -1,8 +1,15 @@
+.buttons-wrapper {
+  max-width:  900px;
+  margin: 0 auto;
+}  
+
 .serviceBtn {
     float: left;
+    position: relative;
     margin: 15% 6% 0;
-    height: 20vw;
-    width: 20vw;
+    /* height: 20%; */
+    width: 20%;
+    padding-top: 20%;
 }
  
 .button-container {
@@ -15,25 +22,20 @@
   height:  100%;
   width:  100%;
 }  
-
-.button-images {
-    min-width:  100%; /* images are square so this handles height as well */
-}  
   
 .button-container p {
     transition: all 1s ease-out;
     background: rgba(88, 88, 88, 0.7);
     border-radius:50%; 
-    vertical-align:middle;
     color: #FFFFFF;
     position:absolute;
-    font-size: 2.5vw; 
+    font-size: calc(18px + .6vw); 
     font-weight: 700; 
     top: 0;
     left:0;
     right:0;
     bottom:0;
-    line-height:  20vw;
+    padding-top: 40%;
     width: 100%;
     height:  100%;
     display:inline-block;
@@ -65,21 +67,23 @@
   width: 100%;
 }
   
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 600px) {
+  .buttons-wrapper {
+    margin: 10vh auto;
+  }    
+
   .serviceBtn{
-    height: 20vh;
-    width: 20vh;
+    width: 33%;
+    padding: 0;
+    margin: 0;
   }
   #cuttingBtn {
-    margin: 1vh calc(25% - 10vh + 1vw); 
+    margin: 10vh calc(25% - 10vh + 1vw) 1vh; 
   }   
   #coloringBtn {
-    margin: 2vh calc(50% - 10vh + 1vw); /* centered, given btn width (20vh) and page padding*/
+    margin: 1vh calc(50% - 10vh + 1vw); /* centered, given btn width (20vh) and page padding*/
   }    
   #smoothingBtn {
-    margin: 2vh calc(75% - 10vh + 1vw) 1vh;
-  }    
-  .button-container p {
-    line-height: 20vh;
-  }
+    margin: 1vh calc(75% - 10vh + 1vw) 1vh;
+  } 
 }
