--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 .App {
   text-align: center;
-  min-height: 100vh;
-
 }
 
 body {
@@ -18,8 +16,6 @@ body {
 
 .page {
   width: 100%;
-  margin: 10vh 0 0 0;
-  padding: 0 0 9vh 0;
 }
 
 .hide {
@@ -52,15 +48,27 @@ body {
   margin: 0 auto;
 }
 
+#textLink,
+#emailLink {
+  width: auto;
+  min-width: calc(140px + 2vw);
+  height: auto;
+  text-align: center;
+  padding: 6.5px .6vw;
+  background: rgba(245, 245, 245, 0);
+  font-size: calc(24px + 1vw);
+  color: #c4122f;    
+  border: solid .8px #c4122f;
+  margin: 1vh;
+  cursor: pointer;
+}
+
 #footer:hover {
   text-decoration: none;
 }
 
 
 @media only screen and (max-width: 1024px) {
-  .page {
-    margin: 12vh 0 20vh;
-  }
   .navbar {
     max-height: 7vh;
   }
@@ -77,7 +85,7 @@ body {
   }
 
   #textLink {
-    visibility: visible !important;
+    display: inline-block !important;
   }
 
 }
