--- a/src/Services.css
+++ b/src/Services.css
@@ -9,7 +9,7 @@
     margin: 15% 6% 0;
     /* height: 20%; */
     width: 20%;
-    padding-top: 20%;
+    /* padding-top: 20%; */
 }
  
 .button-container {
@@ -21,6 +21,7 @@
   cursor: pointer;
   height:  100%;
   width:  100%;
+  margin-bottom: 12vh;
 }  
   
 .button-container p {
@@ -73,17 +74,25 @@
   }    
 
   .serviceBtn{
-    width: 33%;
+    height: 33%;
     padding: 0;
     margin: 0;
   }
+
+  .button-container > p {
+    font-size: calc(33vh / 14);
+  }
+
   #cuttingBtn {
-    margin: 10vh calc(25% - 10vh + 1vw) 1vh; 
+    float: none;
+    margin: 5vh calc(25% - 10vh + 1vw) 1vh; 
   }   
   #coloringBtn {
+    float: none;
     margin: 1vh calc(50% - 10vh + 1vw); /* centered, given btn width (20vh) and page padding*/
   }    
   #smoothingBtn {
+    float: none;
     margin: 1vh calc(75% - 10vh + 1vw) 1vh;
   } 
 }
