--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
   background-color: #343a40;
   border: 1px solid #343a40;
   box-shadow: 0 0 5px #343a40;
-  font-size: 3vh;
+  font-size: calc(20px + .4vw);
 }
 
 .btn:hover {
