--- a/src/components/AppointmentsBar/AppointmentsBar.module.css
+++ b/src/components/AppointmentsBar/AppointmentsBar.module.css
@@ -3,7 +3,8 @@
     z-index: 9999 !important;
     bottom: 0;
     left: 0;
-    background-color: #c3122f;
+    background-image: linear-gradient(90deg, #f04462, #c3122f, #f04462);
+    /* background-color: #c3122f; */
     font-size: calc(22px + .5vw);
     line-height: 3vw;
     text-align: center;
@@ -17,5 +18,9 @@
     width: 100%;
     border: none;
     cursor: pointer;
+}
+
+.bar:hover {
+    color: #593e00;
 }
 
