--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,36 +1,34 @@
 .navbar {
-    display: inline-block;
-    position: fixed;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: absolute;
     left: 0;
     top: 0;
     width: 100%;
-    height: auto;
-    padding: 10px 0;
     background: rgba(60, 60, 60, 1);
-    text-align: left;
     letter-spacing: -1.5px;
-    word-spacing: -1px;
-    z-index: 9999;
 }
-
-.navbar > p {
-    display: inline-block;
-    line-height: 2vw;
-    margin: 18px;
+.navItems {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+.navItem {
+    margin: 20px;
     color: rgba(190, 190, 190, 1);
-    font-size: 20px;
+    font-size: 26px;
     cursor: pointer;
-
 }
 
-.navbar > p:hover{
-    color: white;
+.navItem:hover{
+    color: whitesmoke;
 }
 
 .brand {
     font-size: 22px;
     color: whitesmoke;
-    margin: 0 15px 0 10px;
+    margin: 10px 15px 0 10px;
     cursor: pointer;
 }
 
