--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  padding: 80px 0 80px 0;
+  padding: 80px 0 0 0;
 
 }
 
@@ -53,16 +53,16 @@ body {
 #textLink,
 #emailLink {
   display: inline-flex;
-  width: auto;
+  width: 25vw;
   min-width: calc(140px + 2vw);
   height: auto;
   text-align: center;
   padding: 6.5px .6vw;
   background: rgba(245, 245, 245, 0);
-  font-size: calc(24px + 1vw);
+  font-size: 24px;
   color: #c4122f;    
   border: solid .8px #c4122f;
-  margin: 1vh;
+  margin: 3vh 10vw;
   cursor: pointer;
 }
 
