--- a/src/components/AppointmentsBar/AppointmentsBar.module.css
+++ b/src/components/AppointmentsBar/AppointmentsBar.module.css
@@ -1,16 +1,17 @@
 .bar {
-    position: fixed;
+    /* position: -webkit-sticky; */
+    /* position: ; */
     z-index: 9999 !important;
     bottom: 0;
     left: 0;
     background-image: linear-gradient(90deg, #f04462, #c3122f, #f04462);
-    /* background-color: #c3122f; */
     font-size: calc(22px + .5vw);
     line-height: 3vw;
     text-align: center;
     color: whitesmoke;
     text-transform: uppercase;
     height: auto;
+    min-height: 50px;
     padding: 15px 0;
     display: inline-block;
     font-weight: 600;
@@ -18,6 +19,7 @@
     width: 100%;
     border: none;
     cursor: pointer;
+    margin: 0;
 }
 
 .bar:hover {
