--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -1,12 +1,12 @@
 #buttonDiv {
   margin-top: 10vh;
   margin-bottom: 10vh;
+  max-width: 100%;
   display: flex;
   justify-content: center;
   align-items: stretch;
 }
 .buttons {
-  height: 100%;
   margin: 0 4vw;
   padding: 8px 12px;
   text-decoration: none;
